Test/dafny4/git-issue90.dfy.expect
git-issue90.dfy(6,8): Error: recursive dependency involving a newtype: y -> MyInt -> x
git-issue90.dfy(4,6): Error: const definition contains a cycle: y -> MyInt -> x
2 resolution/type errors detected in git-issue90.dfy
